fix expedition title layout wrapping

--- a/FrontEnd/src/app/components/expedition-gallery/expedition-gallery.component.css
+++ b/FrontEnd/src/app/components/expedition-gallery/expedition-gallery.component.css
@@ -13,3 +13,14 @@
 	margin-right: 5px;
 }
 
+.beginDate {
+	float: left;
+}
+
+.endDate {
+	float: right;
+}
+
+.nowrap {
+	white-space: nowrap;
+}
