--- a/FrontEnd/src/app/components/navigation-bar/navigation-bar.component.css
+++ b/FrontEnd/src/app/components/navigation-bar/navigation-bar.component.css
@@ -1,7 +1,3 @@
-.nowrap {
-	flex-wrap: nowrap;
-}
-
 .padLeft {
 	padding: 3px 20px;
 }
